# querylizer

./: CHANGES.md  Cargo.toml  README.md
.github/workflows/: msrv.yml
src/: deep.rs  deepform.rs  form.rs  lib.rs  simple.rs
