[package]
name = "querylizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dtoa = "1.0.2"
itoa = "1.0.1"
percent-encoding = "2.1.0"
serde = { version = "1.0.136", features = ["derive"] }
thiserror = "1.0.30"
