[package]
edition = "2021"
name = "querylizer"
version = "0.1.4"
authors = ["Jonathan Giddy"]
description = "Serialization library for OpenAPI parameter styles"
homepage = "https://github.com/jinxapi/querylizer/blob/main/README.md"
keywords = ["openapi", "serde", "web"]
categories = ["encoding"]
license = "Apache-2.0"
repository = "https://github.com/jinxapi/querylizer"

[dependencies]
dtoa = "1.0.2"
itoa = "1.0.1"
percent-encoding = "2.1.0"
serde = { version = "1.0.136", features = ["derive"] }
thiserror = "1.0.30"
